--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -7,6 +7,7 @@
     position: relative;
     transition: all 0.2s;
     cursor: text;
+    height: 60px;
 
     &:hover {
         border-color: var(--color-D20);
@@ -54,7 +55,7 @@
     padding: 8px;
     border-radius: 12px;
     background-color: var(--color-L100);
-    box-shadow: 0 12px 16px rgba(0, 0, 0, .06);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, .2);
     transition: all 0.2s;
     z-index: 10;
 
@@ -63,12 +64,16 @@
         border-radius: 8px;
         font-weight: bold;
         cursor: pointer;
-    }
-
-    & li:first-child {
-        background-color: var(--color-D10);
 
     }
+
+    & li:not(:last-child) {
+        margin-bottom: 10px;
+    }
+
+    // & li:first-child {
+    //     background-color: var(--color-D10);
+    // }
 
     & li:hover {
         background-color: var(--color-D10);
