--- a/src/app/global/styles/global.css
+++ b/src/app/global/styles/global.css
@@ -86,112 +86,14 @@ h1 {
     grid-area: 4 / 1 / 4 / 3;
 }
 
+.count-procent-small-term {
+    grid-area: 3 / 1 / 3 / 3;
+}
+
 .start-date-small {
     grid-area: 4 / 3 / 4 / 5;
 }
 
-
-/*---------------option-monthly----------------------*/
-/* .option-monthly {
-    grid-template-rows: repeat(4, 60px);
-}
-
-.option-monthly .calculation-option {
-    grid-area: 1 / 1 / 2 / 5;
-}
-
-.option-monthly .credit-term {
-    grid-area: 3 / 1 / 4 / 3;
-}
-
-.option-monthly .sum-credit {
-    grid-area: 2 / 1 / 3 / 5;
-}
-
-.option-monthly .monthly-payment {
-    grid-area: 2 / 1 / 3 / 5;
-}
-
-.option-monthly .count-procent {
-    grid-area: 4 / 1 / 4 / 3;
-}
-
-.option-monthly .start-date {
-    grid-area: 4 / 3 / 4 / 5;
-}
-
-.option-monthly .month-or-year {
+.start-date-small-term {
     grid-area: 3 / 3 / 3 / 5;
-    padding: 0px 16px;
-    display: flex;
-    align-items: center;
-} */
-
-/*---------------.option-term----------------------*/
-/* .option-term {
-    grid-template-rows: repeat(3, 60px);
 }
-
-.option-term .calculation-option {
-    grid-area: 1 / 1 / 2 / 5;
-}
-
-.option-term .credit-term {
-    display: none;
-}
-
-.option-term .month-or-year {
-    display: none;
-}
-
-.option-term .sum-credit {
-    grid-area: 2 / 1 / 2 / 3;
-}
-
-.option-term .monthly-payment {
-    grid-area: 2 / 3 / 2 / 5;
-}
-
-.option-term .count-procent {
-    grid-area: 3 / 1 / 3 / 3;
-}
-
-.option-term .start-date {
-    grid-area: 3 / 3 / 3 / 5;
-} */
-
-/*---------------option-maximum----------------------*/
-/* .option-maximum {
-    grid-template-rows: repeat(4, 60px);
-}
-
-.option-maximum .calculation-option {
-    grid-area: 1 / 1 / 2 / 5;
-}
-
-.option-maximum .monthly-payment {
-    grid-area: 2 / 1 / 2 / 5;
-}
-
-.option-maximum .credit-term {
-    grid-area: 3 / 1 / 3 / 3;
-}
-
-.option-maximum .count-procent {
-    grid-area: 4 / 1 / 4 / 3;
-}
-
-.option-maximum .month-or-year {
-    grid-area: 3 / 3 / 3 / 5;
-    padding: 0px 16px;
-    display: flex;
-    align-items: center;
-}
-
-.option-maximum .sum-credit {
-    display: none;
-}
-
-.option-maximum .start-date {
-    grid-area: 4 / 3 / 4 / 5;
-} */
