--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -44,6 +44,16 @@
         font-size: 16px;
         line-height: 16px;
     }
+
+    i {
+        display: inline-block;
+        position: absolute;
+        content: "";
+        top: 20px;
+        right: 15px;
+        width: 20px;
+        height: 20px;
+    }
 }
 
 
