--- a/src/app/global/styles/global.css
+++ b/src/app/global/styles/global.css
@@ -45,9 +45,8 @@ ul>li {
     border-radius: 20px;
     border: 1px solid var(--color-D10);
     padding: 30px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    font-size: 14px;
+    line-height: 20px;
 
 }
 
@@ -70,7 +69,16 @@ ul>li {
 }
 
 
+
+.calculation__button {
+    margin-top: 15px;
+}
+
+
+
+
 h1 {
+    font-weight: 600;
     text-align: left;
     font-size: 50px;
     line-height: 52px;
