--- a/src/app/global/styles/global.css
+++ b/src/app/global/styles/global.css
@@ -216,3 +216,72 @@ h1 {
     border-radius: 14px;
     padding: 14px;
 }
+
+
+/* react datepicker styles */
+.react-datepicker {
+    border: 1px solid transparent !important;
+    border-radius: 12px;
+    background-color: var(--color-L100);
+    box-shadow: 0 -2px 6px rgba(0, 0, 0, .02), 0 10px 14px rgba(20, 36, 56, .06);
+}
+
+.react-datepicker__month-container {
+    padding: 24px 20px 0;
+}
+
+.react-datepicker__week {
+    display: flex;
+}
+
+.react-datepicker__day {
+    width: 50px !important;
+    height: 40px !important;
+    border-radius: 15px !important;
+    font-weight: 600 !important;
+    font-size: 14px !important;
+    line-height: 18px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    line-height: auto !important;
+    margin: 0 !important;
+}
+
+.react-datepicker__day--selected {
+    border-color: var(--color-B100);
+    background-color: var(--color-B100) !important;
+    color: var(--color-L100) !important;
+    font-weight: 600 !important;
+}
+
+.react-datepicker__triangle {
+    display: none;
+}
+
+.react-datepicker__header {
+    background-color: transparent !important;
+    border-bottom: 1px solid transparent !important;
+}
+
+.react-datepicker__day-name {
+    width: 45px !important;
+    height: 20px !important;
+    font-weight: 600;
+}
+
+.react-datepicker__current-month {
+    height: 40px !important;
+}
+
+.react-datepicker__navigation {
+    top: 22px !important;
+}
+
+.react-datepicker__navigation--previous {
+    left: 50px !important;
+}
+
+.react-datepicker__navigation--next {
+    right: 50px !important;
+}
